<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_frame"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:src="@drawable/image_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/item_image" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/sample_item_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <LinearLayout
                    android:id="@+id/add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/btnNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="10dp"
                        android:text="@string/add_to_cart"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_baseline_arrow_forward_24"
                        android:contentDescription="@string/arrow_forward" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_price">


                <LinearLayout
                    android:id="@+id/btnFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background_fav"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/txtFav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="10dp"
                        android:text="@string/favourite"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/imgIconFav"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/favorite_white"
                        android:contentDescription="@string/fav_icon" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>